--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  box-sizing: inherit;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 1rem;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+p {
+  margin: 0;
+}
+
+table {
+  border: 1px solid #000;
+  border-collapse: collapse;
+}
+
+th {
+  border: 1px solid #000;
+}
+
+td {
+  border: 1px solid #000;
 }
